# chess-diffing

./: .gitignore  main.py  pyproject.toml  requirements.txt
learning-chess-blindfolded/: .gitignore  requirements.txt  run_training.sh
learning-chess-blindfolded/src/: create_custom_gpt.py  train_gpt2.py  train_lora.py
learning-chess-blindfolded/src/data_processing/: chess_dataset.py  create_gpt2_dataset.py
learning-chess-blindfolded/src/processed_data/: test_uci.txt  train_uci.txt
src/: load_data.py
